--- a/src/InsuAi_frontend/package.json
+++ b/src/InsuAi_frontend/package.json
@@ -4,27 +4,35 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "setup": "npm i && dfx canister create InsuAi_backend && dfx generate InsuAi_backend && dfx deploy",
     "start": "vite --port 3000",
     "prebuild": "dfx generate",
-    "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@dfinity/agent": "^2.1.3",
     "@dfinity/candid": "^2.1.3",
-    "@dfinity/principal": "^2.1.3"
+    "@dfinity/principal": "^2.1.3",
+    "firebase": "^11.9.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.10",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.3.1",
+    "postcss": "^8.5.6",
     "sass": "^1.63.6",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "vite": "6",
     "vite-plugin-environment": "^1.1.3"
   }
 }
