--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   "type": "module",
   "workspaces": [
     "src/InsuAi_frontend"
-  ]
+  ],
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
+    "tailwindcss": "^4.1.10"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.10"
+  }
 }
